# MAS-Orchestrator-Quality-Benchmarking

./: .env.template  README.md  data_bundle.json  pyproject.toml  requirements-minimal.txt  requirements.txt  run_experiments_fixed.py  stat-test-planning.py  stat-test.py
configs/: base.yaml
configs/experiments/: baseline.yaml  rag.yaml
configs/models/: anthropic.yaml  groq.yaml  openai.yaml
docker/: Dockerfile
pinecone_upsert/: upsert_script.py
run_results/final_experiment_run_GPT-5-mini/: advanced_metrics_analysis.json  realm_bench_detailed_results.json  realm_bench_experiment_summary.json
run_results/final_experiment_run_GPT-5-nano/: advanced_metrics_analysis.json  realm_bench_detailed_results.json  realm_bench_experiment_summary.json
scripts/: analyze_metrics.py  run_experiments.py
src/: __init__.py
src/agents/: interaction_logger.py  orchestrator.py  types.py  worker.py
src/agents/tools/: rag_tool.py  simple_code_interpreter.py
src/models/: registry.py
src/realm/: adapter.py
src/utils/: settings.py
